[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/images/characters/bobbit_knocked.png" type="Texture" id=1]
[ext_resource path="res://assets/images/characters/bobbit_fallen.png" type="Texture" id=2]
[ext_resource path="res://assets/images/characters/bobbit_running.png" type="Texture" id=3]
[ext_resource path="res://src/characters/hero_animator.gd" type="Script" id=4]
[ext_resource path="res://assets/images/characters/bobbit_standing.png" type="Texture" id=5]
[ext_resource path="res://assets/images/characters/bobbit_jump.png" type="Texture" id=6]

[sub_resource type="Animation" id=1]
resource_name = "ClimbDown"
length = 0.14
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("ClimbDown:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=2]
resource_name = "ClimbUp"
length = 0.14
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("ClimbUp:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=8]
resource_name = "CrawlOnCeiling"
length = 0.14
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("CrawlOnCeiling:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=12]
resource_name = "Fallen"
length = 0.12
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Fallen:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=3]
resource_name = "JumpFall"
length = 0.12
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("JumpFall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=4]
resource_name = "JumpRise"
length = 0.12
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("JumpRise:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=13]
resource_name = "Knocked"
length = 0.24
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Knocked:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=11]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Rest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ClimbDown:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ClimbUp:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("CrawlOnCeiling:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("JumpFall:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("JumpRise:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("RestOnCeiling:frame")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("RestOnWall:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Walk:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("Fallen:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/10/type = "value"
tracks/10/path = NodePath("Knocked:frame")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Rest"
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Rest:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 3 ]
}

[sub_resource type="Animation" id=10]
resource_name = "RestOnCeiling"
length = 0.14
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("RestOnCeiling:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=6]
length = 0.14
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath("RestOnWall:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.07 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="Animation" id=7]
length = 0.48
loop = true
step = 0.12
tracks/0/type = "value"
tracks/0/path = NodePath("Walk:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.12, 0.24, 0.36 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="HeroAnimator" type="Node2D"]
z_index = 2
script = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}
animations = {
"ClimbDown": {
"name": "ClimbDown",
"speed": 1.0,
"sprite_name": "ClimbDown"
},
"ClimbUp": {
"name": "ClimbUp",
"speed": 1.0,
"sprite_name": "ClimbUp"
},
"CrawlOnCeiling": {
"name": "CrawlOnCeiling",
"speed": 1.0,
"sprite_name": "CrawlOnCeiling"
},
"Fallen": {
"name": "Fallen",
"speed": 1.0,
"sprite_name": "Fallen"
},
"JumpFall": {
"name": "JumpFall",
"speed": 1.0,
"sprite_name": "JumpFall"
},
"JumpRise": {
"name": "JumpRise",
"speed": 1.0,
"sprite_name": "JumpRise"
},
"Knocked": {
"name": "Knocked",
"speed": 1.0,
"sprite_name": "Knocked"
},
"RESET": {
"name": "RESET",
"speed": 1.0,
"sprite_name": "RESET"
},
"Rest": {
"name": "Rest",
"speed": 1.0,
"sprite_name": "Rest"
},
"RestOnCeiling": {
"name": "RestOnCeiling",
"speed": 1.0,
"sprite_name": "RestOnCeiling"
},
"RestOnWall": {
"name": "RestOnWall",
"speed": 1.0,
"sprite_name": "RestOnWall"
},
"Walk": {
"name": "Walk",
"speed": 1.0,
"sprite_name": "Walk"
}
}

[node name="Walk" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 3 )
hframes = 4

[node name="ClimbUp" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 5 )
hframes = 4

[node name="ClimbDown" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 5 )
hframes = 4

[node name="CrawlOnCeiling" type="Sprite" parent="."]
visible = false
rotation = -1.5708
texture = ExtResource( 5 )
hframes = 4

[node name="Rest" type="Sprite" parent="."]
position = Vector2( 0, -12 )
texture = ExtResource( 5 )
hframes = 4

[node name="RestOnWall" type="Sprite" parent="."]
visible = false
texture = ExtResource( 5 )
hframes = 4

[node name="RestOnCeiling" type="Sprite" parent="."]
visible = false
rotation = 3.14159
scale = Vector2( -1, 1 )
texture = ExtResource( 5 )
hframes = 4

[node name="JumpFall" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 6 )

[node name="JumpRise" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -12 )
texture = ExtResource( 6 )

[node name="Knocked" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
texture = ExtResource( 1 )
hframes = 2

[node name="Fallen" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -2 )
texture = ExtResource( 2 )

[node name="RESET" type="Sprite" parent="."]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/ClimbDown = SubResource( 1 )
anims/ClimbUp = SubResource( 2 )
anims/CrawlOnCeiling = SubResource( 8 )
anims/Fallen = SubResource( 12 )
anims/JumpFall = SubResource( 3 )
anims/JumpRise = SubResource( 4 )
anims/Knocked = SubResource( 13 )
anims/RESET = SubResource( 11 )
anims/Rest = SubResource( 5 )
anims/RestOnCeiling = SubResource( 10 )
anims/RestOnWall = SubResource( 6 )
anims/Walk = SubResource( 7 )
